# Torqata-Assignment

./: Dockerfile  aggregation.py  crud.py  db.py  main.py  model.py  pyproject.toml  requirements.txt  user.py
db_collections/: aggregation.py  crud.py  user.py
src/: commands.py  main.py  models.py
src/alembic/: env.py
src/alembic/versions/: 0710ac9a1092_show_migration.py  08a695fc64ec_show_migration.py  115088add971_new_migration.py  1369876c1c6f_new_migration.py  1db9f52bebac_show_migration.py  43a3855ad08d_show_migration.py  4befd78db95c_show_migration.py  6ba4d87086c7_show_migration.py  99eeadf04ab6_new_migration.py  a9b797a939d6_show_migration.py  acb5a2aa42bb_migration.py  b0f0d412bcf9_show_migration.py  b2f5f2074bbf_show_migration.py  bd91dd8dc1f6_user_migration.py  c4df248f8fca_show_migration.py  fdd2e954bafe_show_migration.py  ff52253e4332_show_migration.py
src/db_collections/: crud.py  user.py
src/models/: pgsql.py
src/shows/: models.py  routes.py  service.py
src/shows/services/: mongodb.py  postgres.py
src/user/: models.py  routes.py  service.py
